whole main change and  commit

--- a/profit-loss.html
+++ b/profit-loss.html
@@ -220,6 +220,9 @@
     </div>
   </div>
 
+  <!-- Footer -->
+  <div id="footer-placeholder"></div>
+
   <!-- Toast -->
   <div class="position-fixed bottom-0 end-0 p-3" style="z-index:9999">
     <div id="liveToast" class="toast" role="alert">
@@ -233,9 +236,10 @@
 
   <!-- Scripts — exact same order & paths as index.html -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="config.js"></script>
-  <script src="auth.js"></script>
-  <script src="app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="js/config.js"></script>
+  <script src="js/auth.js"></script>
+  <script src="js/app.js"></script>
 
   <script>
   (function () {
